@@ -1,5 +1,10 @@
 2008-12-11  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-video-indexer.c (main): Add --no-limit
+	option to the indexer, as it exists in the thumbnailer
+
+2008-12-11  Bastien Nocera  <hadess@hadess.net>
+
 	* src/backend/bacon-video-widget-gst-0.10.c
 	(bacon_video_widget_new): Don't auto-resize by default
 
